# dendritic

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  mkdocs.yml
autodiff/: Cargo.toml
autodiff/src/: lib.rs  node.rs  ops.rs  regularizers.rs
autodiff/tests/: autodiff_tests.rs  logistic_tests.rs
bayes/: Cargo.toml
bayes/data/prostate_cancer/: outputs.json
bayes/data/weather/: inputs.json
bayes/data/weather_multi_feature/: inputs.json  outputs.json
bayes/src/: gaussian_bayes.rs  lib.rs  naive_bayes.rs  shared.rs
bayes/tests/: gaussian_bayes_tests.rs  naive_bayes_tests.rs
clustering/: Cargo.toml
clustering/src/: example.py  hierarchical.rs  k_means.rs  lib.rs
clustering/tests/: hiearchical_tests.rs  k_means_tests.rs
crates/dendritic-autodiff/: Cargo.toml  README.md
crates/dendritic-autodiff/src/: binary.rs  graph.rs  graph_interface.rs  lib.rs  main.rs  node.rs  ops.rs  registry.rs  tensor.rs  unary.rs  value.rs
crates/dendritic-autodiff/testing/: 13209896351081721816_metadata.json  13209896351081721816_nodes.json
crates/dendritic-autodiff/tests/: autodiff_tests.rs  binary_ops_tests.rs  graph_tests.rs  minimization_tests.rs  node_tests.rs  ops_tests.rs  tensor_tests.rs  unary_ops_tests.rs
crates/dendritic-bayes/: Cargo.toml  README.md
crates/dendritic-bayes/src/: gaussian_bayes.rs  lib.rs  naive_bayes.rs  shared.rs
crates/dendritic-bayes/tests/: gaussian_bayes_tests.rs  naive_bayes_tests.rs
crates/dendritic-clustering/: Cargo.toml  README.md
crates/dendritic-clustering/src/: hierarchical.rs  k_means.rs  lib.rs
crates/dendritic-clustering/tests/: hiearchical_tests.rs
crates/dendritic-datasets/: Cargo.toml  README.md
crates/dendritic-datasets/data/: .~lock.boston_housing.csv#  alzheimers.parquet  boston_housing.parquet
crates/dendritic-datasets/src/: airfoil_noise.rs  boston_housing.rs  breast_cancer.rs  customer_purchase.rs  diabetes.rs  iris.rs  lib.rs  student_performance.rs
crates/dendritic-datasets/tests/: diabetes_tests.rs  parquet_tests.rs
crates/dendritic-knn/: Cargo.toml  README.md
crates/dendritic-knn/src/: knn.rs  lib.rs  utils.rs
crates/dendritic-knn/tests/: distance_tests.rs  knn_tests.rs
crates/dendritic-models/: Cargo.toml  README.md
crates/dendritic-models/src/: diabetes.rs  exam_scores.rs  gtd.rs  heart_disease.rs  lib.rs  main.rs  mpg_model.rs
crates/dendritic-ndarray/: Cargo.toml  README.md  name_of_saved_ndarray.json
crates/dendritic-ndarray/src/: lib.rs  ndarray.rs  shape.rs
crates/dendritic-ndarray/tests/: aggregate_ops_tests.rs  binary_ops_tests.rs  ndarray_tests.rs  unary_ops_tests.rs
crates/dendritic-optimizer/: Cargo.toml
crates/dendritic-optimizer/linear_testing/: parameters.json
crates/dendritic-preprocessing/: Cargo.toml  README.md
crates/dendritic-regression/: Cargo.toml  README.md
datasets/: Cargo.toml
datasets/data/: .~lock.diabetes.csv#  airfoil_noise_data.parquet  alzheimers.parquet  boston_housing.csv  customer_purchase_data.parquet  iris.csv
datasets/src/: airfoil_noise.rs  alzhiemers.rs  boston_housing.rs  breast_cancer.rs  customer_purchase.rs  diabetes.rs  iris.rs  lib.rs  student_performance.rs  utils.rs
datasets/tests/: alzheimers_tests.rs  breast_cancer_tests.rs  diabetes_tests.rs  iris_tests.rs  parquet_tests.rs  utils_tests.rs
dendritic-clustering/: Cargo.toml
dendritic-clustering/src/: k_means.rs  lib.rs
dendritic-clustering/tests/: hiearchical_tests.rs  k_means_tests.rs
dendritic-datasets/: Cargo.toml
dendritic-datasets/data/: student_performance.parquet
dendritic-datasets/src/: alzhiemers.rs  lib.rs  utils.rs
dendritic-datasets/tests/: alzheimers_tests.rs  breast_cancer_tests.rs  iris_tests.rs
dendritic-metrics/: Cargo.toml
dendritic-metrics/src/: activations.rs  lib.rs
dendritic-metrics/tests/: activation_tests.rs  utils_tests.rs
dendritic-models/: Cargo.toml
dendritic-models/src/: exam_scores.rs  example.rs  gtd.rs  mpg_model.rs
dendritic-ndarray/: Cargo.toml
dendritic-ndarray/src/: lib.rs  ndarray.rs
dendritic-ndarray/src/ops/: mod.rs  (+2 more)
dendritic-ndarray/tests/: ndarray_tests.rs  scalar_ops_tests.rs  shape_tests.rs  unary_ops_tests.rs
dendritic-preprocessing/: Cargo.toml
dendritic-preprocessing/src/: lib.rs  standard_scalar.rs
dendritic-regression/: Cargo.toml
dendritic-regression/src/: elastic_net.rs  lasso.rs  lib.rs  linear.rs  ridge.rs
dendritic-regression/tests/: elastic_tests.rs  lasso_tests.rs  linear_tests.rs  logistic_tests.rs  ridge_tests.rs
dendritic-trees/: Cargo.toml
dendritic-trees/src/: lib.rs  random_forest.rs
dendritic-trees/tests/: bootstrap_tests.rs  random_forest_tests.rs
knn/: Cargo.toml
knn/src/: distance.rs  knn.rs  lib.rs  utils.rs
knn/tests/: distance_tests.rs  knn_tests.rs
metrics/: Cargo.toml
metrics/src/: activations.rs  lib.rs  loss.rs  mae.rs  mse.rs  rss.rs  sigmoid.rs  utils.rs
metrics/tests/: activation_tests.rs  binary_cross_entropy_tests.rs  loss_tests.rs  utils_tests.rs
models/: Cargo.toml
models/src/: .heart_disease.rs.swp  .main.rs.swp  diabetes.rs  exam_scores.rs  example.rs  gtd.rs  heart_disease.rs  lib.rs  main.rs  mpg_model.rs
ndarray/: Cargo.toml
ndarray/src/: lib.rs  ndarray.rs  ops.rs  shape.rs
ndarray/tests/: aggregate_ops_tests.rs  binary_ops_tests.rs  ndarray_tests.rs  ops_tests.rs  scalar_ops_tests.rs  shape_tests.rs  unary_ops_tests.rs  utf_ops_tests.rs
preprocessing/: Cargo.toml
preprocessing/src/: encoding.rs  lib.rs  standard_scalar.rs
preprocessing/tests/: encoding_tests.rs  preprocessing_tests.rs
regression/: Cargo.toml
regression/src/: elastic_net.rs  lasso.rs  linear.rs  logistic.rs  ridge.rs
regression/tests/: elastic_tests.rs  lasso_tests.rs  linear_tests.rs  logistic_tests.rs  multi_class_logistic_tests.rs  ridge_tests.rs
trees/: Cargo.toml
trees/data/: test.json
trees/src/: bootstrap.rs  decision_tree.rs  decision_tree_regressor.rs  lib.rs  node.rs  random_forest.rs  utils.rs
trees/tests/: bootstrap_tests.rs  decision_tree_tests.rs  node_tests.rs  random_forest_tests.rs  regression_tree_tests.rs
(+540 files in other folders)
