[package]
name = "dendritic"
version = "1.3.0"
edition = "2021"
description = "Machine learning library for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = ["crates/*"]

[workspace.package]
version = "1.3.0"
edition = "2021"
