[package]
name = "dendritic"
version = "2.0.1"
edition = "2021"
description = "Iterative Optimization Library"
publish = true
license = "MIT"

[dependencies]
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-stats = "0.6.0"
chrono = "0.4"
log = "0.4.27"
env_logger = "0.11"
serde = "1.0.126"
serde_json = "1.0.64"
typetag = "0.2.20"
rand = "0.8"
indicatif = "0.18.0"

[dependencies.uuid]
version = "1.18.0"
features = [
    "v4",
]

