[package]
name = "autodiff"
version = { workspace = true  } 
edition = { workspace = true }
description = "Autodifferentation package for scalar and multi dimensional values"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
