[package]
name = "clustering"
version = { workspace = true  } 
edition = { workspace = true }
description = "Package for algorithms related to clustering"

[dependencies]
ndarray = { workspace = true }
metrics = { workspace = true }
knn = { workspace = true }

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

