[package]
name = "datasets"
version = { workspace = true  } 
edition = { workspace = true }
description = "Prebuilt datasets that can be imported for ML model training"

[dependencies]
ndarray = { workspace = true }
preprocessing = { workspace = true }
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
arrow = "51.0.0"
arrow-schema = "51.0.0"
arrow-array = "51.0.0"
arrow-csv = "51.0.0"
parquet = "51.0.0"
csv = "1.3.0"

