[package]
name = "dendritic-datasets"
version = "0.1.0"
edition = "2021" 
description = "Prebuilt datasets that can be imported for ML model training"
publish = false

[dependencies]
dendritic-ndarray = { path = '../dendritic-ndarray' }
dendritic-preprocessing = { path = "../dendritic-preprocessing" }
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
arrow = "51.0.0"
arrow-schema = "51.0.0"
arrow-array = "51.0.0"
arrow-csv = "51.0.0"
parquet = "51.0.0"
csv = "1.3.0"

