[package]
name = "dendritic-models"
version = "0.1.0"
edition = "2021" 
description = "Package of trained machine learning models for dendritic"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dendritic-ndarray = { path= "../dendritic-ndarray" }
dendritic-metrics = { path= "../dendritic-metrics" }
dendritic-autodiff = { path= "../dendritic-autodiff" }
dendritic-regression = { path= "../dendritic-regression" }
dendritic-preprocessing = { path= "../dendritic-preprocessing" }
dendritic-datasets = { path= "../dendritic-datasets" }
dendritic-trees = { path= "../dendritic-trees" }
dendritic-knn = { path= "../dendritic-knn" }
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
arrow = "51.0.0"
arrow-schema = "51.0.0"
arrow-array = "51.0.0"
arrow-json = "51.0.0"
postgres = "0.19.7"
parquet = "52.0.0"
bigdecimal = "0.4.4"
csv = "1.3.0"


