[package]
name = "dendritic-ndarray"
version = { workspace = true } 
edition = "2021"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-package]
exclude = [
    "data/*"
]

[dependencies]
itertools = "0.13.0"
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
