[package]
name = "dendritic-preprocessing"
version = { workspace = true  } 
edition = { workspace = true }
description = "Package for preprocessing datasets to convert to numerical representation"


[dependencies]
dendritic-ndarray = { path = '../dendritic-ndarray' }

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
