[package]
name = "dendritic-regression"
version = "0.1.0"
edition = "2021" 
description = "Machine Learning algorithms that are based on regression techniques"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dendritic-ndarray = { path = '../dendritic-ndarray' }
dendritic-metrics = { path = '../dendritic-metrics' }
dendritic-autodiff = { path = '../dendritic-autodiff' }
dendritic-preprocessing = { path = '../dendritic-preprocessing' }
dendritic-datasets = { path = '../dendritic-datasets' }

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
