[package]
name = "metrics"
version = { workspace = true  } 
edition = { workspace = true }
description = "Collection of loss & activation functions for machine learning models"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { workspace = true }

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

