[package]
name = "preprocessing"
version = { workspace = true  } 
edition = { workspace = true }
description = "Package for preprocessing datasets to convert to numerical representation"


[dependencies]
ndarray = { workspace = true }

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
