[package]
name = "regression"
version = { workspace = true  } 
edition = { workspace = true }
description = "Machine Learning algorithms that are based on regression techniques"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { workspace = true }
metrics = { workspace = true }
autodiff = { workspace = true }
preprocessing = { workspace = true }

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
