[package]
name = "trees"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { workspace = true }
metrics = { workspace = true }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
