[package]
name = "dendritic-autodiff"
version = "1.1.0"
edition = "2021" 
description = "Autodifferentation package for scalar and multi dimensional values"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dendritic-ndarray = { path = '../dendritic-ndarray' }
dendritic-metrics = { path = '../dendritic-metrics' }

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
