[package]
name = "dendritic-autodiff"
version = {workspace = true}
edition = {workspace = true } 
description = "Autodifferentation package for scalar and multi dimensional values"
publish = true
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dendritic = {version = "1.1.1", path = "../../" }
dendritic-ndarray = { version = "1.1.0", path = '../dendritic-ndarray' }
dendritic-metrics = { version = "1.1.0", path = '../dendritic-metrics' }
ndarray = "0.16.1"
chrono = "0.4"
polars = "0.48.1"
log = "0.4.27"
env_logger = "0.11"

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
