[package]
name = "dendritic-clustering"
version = {workspace = true}
edition = {workspace = true } 
description = "Package for algorithms related to clustering"
publish = true
license = "MIT" 

[dependencies]
dendritic = {version = "1.1.1", path = "../../" }
dendritic-ndarray = { version = "1.1.0", path = '../dendritic-ndarray' }
dendritic-metrics = { version = "1.1.0", path = '../dendritic-metrics' }
dendritic-knn = { version = "1.1.0", path = '../dendritic-knn' }
dendritic-datasets = { version = "1.1.0", path = '../dendritic-datasets' }

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

