[package]
name = "dendritic-datasets"
version = "1.1.0"
edition = "2021" 
description = "Prebuilt datasets that can be imported for ML model training"
license = "MIT"
publish = true

[dependencies]
dendritic = {version = "1.1.1", path = "../../" }
dendritic-ndarray = { version =  "1.1.0", path = '../dendritic-ndarray' }
dendritic-preprocessing = { version = "1.1.0", path = "../dendritic-preprocessing" }
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
arrow = "51.0.0"
arrow-schema = "51.0.0"
arrow-array = "51.0.0"
arrow-csv = "51.0.0"
parquet = "51.0.0"
csv = "1.3.0"

