[package]
name = "dendritic-knn"
version = {workspace = true}
edition = {workspace = true } 
description = "Package for algorithms related to K Nearest Neighbors"
publish = true
license = "MIT" 

[dependencies]
dendritic = {version = "1.1.1", path = "../../" }
dendritic-ndarray = { version = "1.1.0", path = '../dendritic-ndarray' }
dendritic-metrics = { version = "1.1.0", path = '../dendritic-metrics' }
dendritic-datasets = { version = "1.1.0", path = '../dendritic-datasets' }

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

