[package]
name = "dendritic-models"
version = {workspace = true}
edition = {workspace = true } 
description = "Package of trained machine learning models for dendritic"
publish = true
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dendritic = {version = "1.1.1", path = "../../" }
dendritic-ndarray = { version = "1.1.0", path= "../dendritic-ndarray" }
dendritic-metrics = { version = "1.1.0", path= "../dendritic-metrics" }
dendritic-autodiff = { version = "1.1.0", path= "../dendritic-autodiff" }
dendritic-regression = { version = "1.1.0", path= "../dendritic-regression" }
dendritic-preprocessing = { version = "1.1.0", path= "../dendritic-preprocessing" }
dendritic-datasets = { version = "1.1.0", path= "../dendritic-datasets" }
dendritic-trees = { version = "1.1.0", path= "../dendritic-trees" }
dendritic-knn = { version = "1.1.0", path= "../dendritic-knn" }
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
arrow = "51.0.0"
arrow-schema = "51.0.0"
arrow-array = "51.0.0"
arrow-json = "51.0.0"
postgres = "0.19.7"
parquet = "52.0.0"
bigdecimal = "0.4.4"
csv = "1.3.0"


