[package]
name = "dendritic-ndarray"
version = "1.1.0"
edition = "2021"
publish = true
description  = "NDArray Package for dendritic"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-package]
exclude = [
    "data/*",
    "target/*"
]

[dependencies]
itertools = "0.13.0"
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
