[package]
name = "dendritic-optimizer"
version = { workspace = true }
edition = { workspace = true } 
description = "Optimizer package built on top of autodiff crate with default regression models"
publish = true
license = "MIT" 

[dependencies]
dendritic = {version = "1.1.1", path = "../../" }
dendritic-autodiff = { version = "1.5.0", path = '../dendritic-autodiff' }
ndarray = { version = "0.16.1", features = ["serde"] }
serde = "1.0.126"
serde_json = "1.0.64"
indicatif = "0.18.0"

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
