[package]
name = "dendritic-preprocessing"
version = "1.1.0"
edition = "2021"
description = "Package for preprocessing datasets to convert to numerical representation"
license = "MIT"

[dependencies]
dendritic = {version = "1.1.1", path = "../../" }
dendritic-ndarray = { version = "1.1.1", path = '../dendritic-ndarray' }

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
