[package]
name = "dendritic-preprocessing"
version = {workspace = true}
edition = {workspace = true } 
description = "Package for preprocessing datasets to convert to numerical representation"
license = "MIT"

[dependencies]
dendritic = {version = "1.1.1", path = "../../" }
ndarray = { version = "0.16.1", features = ["serde"] }
serde = "1.0.126"
serde_json = "1.0.64"
log = "0.4.27"
env_logger = "0.11"
rand = "0.8"

[dev-dependencies]
rand = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
